# marginal-emissions-germany

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  compress_results.sh  env_linux.yml  env_nobuilds.yml  env_windows.yml  environment_clean.yaml  pyproject.toml  requirements.yaml  setup.py  vars.py
data/: Realisierte_Erzeugung_202508280000_202509080000_Viertelstunde.csv  Realisierter_Stromverbrauch_202508280000_202509080000_Viertelstunde.csv  ec_cbpf_20250101_20250907_de.csv  ec_public_power_20250101_20250907_de.csv
data/interim/: emissions_germany_202301010000_202501010000.csv  emissions_germany_utc_202212232200_202412312200.csv  emissions_germany_utc_202212232200_202501012200.csv  emissions_germany_utc_202212312200_202412312200.csv  emissions_germany_utc_202212312300_202412312300.csv  generation_amprion_202301010000_202412312345.csv  generation_f_hertz_202301010000_202412312345.csv  generation_f_hertz_utc_202212312300_202412312245.csv  generation_tennet_202301010000_202412312345.csv  generation_tennet_utc_202212232300_202412312245.csv  generation_tennet_utc_202212232300_202501012245.csv  generation_tennet_utc_202212312300_202412312245.csv  generation_transnet_bw_202301010000_202412312345.csv  generation_transnet_bw_utc_202212232300_202412312245.csv  generation_transnet_bw_utc_202212232300_202501012245.csv  generation_transnet_bw_utc_202212232315_202501012245.csv  generation_transnet_bw_utc_202212312300_202412312245.csv  generation_transnetbw_utc_202212232300_202501012245.csv
data/powerplant_generation/: Dampfkraftwerk_Rheinhafen_202508260000_202509052359_Viertelstunde_1.csv  Gemeinschaftskraftwerk_St_cken_202508260000_202509052359_Viertelstunde_2.csv  GuD_Dormagen_202501010000_202509052359_Viertelstunde_5.csv  GuD_Dormagen_202508260000_202509052359_Viertelstunde_5.csv  GuD_Hamm-Uentrop_202508260000_202509052359_Viertelstunde_6.csv  GuD_Herne_202508260000_202509052359_Viertelstunde_7.csv  GuD_Ludwigshafen_Mitte_202501010000_202509052359_Viertelstunde_8.csv  GuD_Ludwigshafen_Mitte_202508260000_202509052359_Viertelstunde_8.csv  GuD_Ludwigshafen_S_d_202508260000_202509052359_Viertelstunde_9.csv  GuD_M_nchen_S_d_1_202508260000_202509052359_Viertelstunde_12.csv  GuD_M_nchen_S_d_2_202508260000_202509052359_Viertelstunde_13.csv  Heizkraftwerk_Altbach_Deizisau_202508260000_202509052359_Viertelstunde_14.csv  Heizkraftwerk_Berlin_Mitte_202508260000_202509052359_Viertelstunde_15.csv  Heizkraftwerk_Heilbronn_202508260000_202509052359_Viertelstunde_16.csv  Heizkraftwerk_Herdecke_202508260000_202509052359_Viertelstunde_17.csv  Heizkraftwerk_K_ln-Niehl_202508260000_202509052359_Viertelstunde_19.csv  Heizkraftwerk_M_nchen_Nord_2_202508260000_202509052359_Viertelstunde_23.csv  Heizkraftwerk_Merkenich_202508260000_202509052359_Viertelstunde_21.csv  Heizkraftwerk_Reuter_202501010000_202509052359_Viertelstunde_25.csv  Heizkraftwerk_Reuter_West_202508260000_202509052359_Viertelstunde_26.csv  Heizkraftwerk_Stuttgart-M_nster_202508260000_202509052359_Viertelstunde_28.csv  Heizkraftwerk_Wedel_202508260000_202509052359_Viertelstunde_29.csv  Heizkraftwerk_West_202508260000_202509052359_Viertelstunde_30.csv  Heizkraftwerk_Wolfsburg_Nord_202508260000_202509052359_Viertelstunde_31.csv  K_stenkraftwerk_Kiel_202508260000_202509052359_Viertelstunde_73.csv  Kraftwerk_Boxberg_202508260000_202509052359_Viertelstunde_32.csv  Kraftwerk_Burghausen_202508260000_202509052359_Viertelstunde_33.csv  Kraftwerk_Datteln_202508260000_202509052359_Viertelstunde_34.csv  Kraftwerk_Emsland_202508260000_202509052359_Viertelstunde_35.csv  Kraftwerk_Fenne_202501010000_202509052359_Viertelstunde_36.csv  Kraftwerk_Fenne_202508260000_202509052359_Viertelstunde_36.csv  (+48 more)
data/processed/: test_final_f_hertz  test_final_tennet  (+30 more)
notebooks/: data_inspection.ipynb  data_inspections.ipynb  data_preparation.ipynb  data_resampling.ipynb  electricitymaps_call.ipynb  enercon_msdr.ipynb  inspections.ipynb  mef_evaluation.ipynb  mef_validation.ipynb  msdr_analysis.ipynb  msdr_test.ipynb  notebooks.ipynb  regional_allocation.ipynb  smard_inspection.ipynb  test_autocorrelation.ipynb  test_autocorrelation_stationarity.ipynb  test_mef_evaluation.ipynb  test_stationarity.ipynb  test_tvtp.ipynb
scripts/: scrape_energyCharts_api.py  testEditableInstallation.py  test_editableInstallation.py
(+250 files in other folders)
