# Project setup file

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marginal-emissions-germany"
version = "0.1"
description = "Tool to compute a MEF signal for the German electricity mix"
authors = [
    {name = "Alexander Kleinwächter", email = "a.kleinwaechter97@gmail.com"}
]
readme = "README.md"
dependencies = [ # For adding installation dependencies of the package later on
   "pandas>=2.0.0",
   "click>=8.3.1",
    "chardet"
]

[project.scripts]
mef = "marginal_emissions.__init_cli__:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}